--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <!-- Paste BOTH strings as required -->
     <string name="back4app_app_id">wcK26giewdXbh2uDoc9FMbyBPUmVuZTpXgdKSVN8</string>
     <string name="back4app_client_key">MDbvQbiDtC8Pnjru6ZPzUmmVFXM2XFTGsa9hDbhj</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
